// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addImportantToEachRule() should add !important to each rule 1`] = `
{
  "&:hover": {
    "&:focus": {
      "color": "orange !important",
    },
    "color": "blue !important",
  },
  "color": "red !important",
  "content": """ !important",
  "display": "block !important",
  "margin": "0 !important",
}
`;

exports[`focusPseudoJssStyle should return correct jss style 1`] = `
{
  "&:focus::before": {
    "borderRadius": "1px",
    "bottom": 0,
    "content": """",
    "left": 0,
    "outline": "2px solid #1A44EA",
    "outlineOffset": "2px",
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  "&:focus:not(:focus-visible)::before": {
    "outline": 0,
  },
  "outline": 0,
}
`;

exports[`getBackfaceVisibilityJssStyle() should return correct styles 1`] = `
{
  "WebkitBackfaceVisibility": "hidden",
  "backfaceVisibility": "hidden",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: false and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "fit-content",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: false and shownStyles: undefined 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: true and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: true and shownStyles: undefined 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: 'auto' 1`] = `
{
  "bottom": "auto",
  "left": "auto",
  "right": "auto",
  "top": "auto",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: -1 1`] = `
{
  "bottom": "-1px",
  "left": "-1px",
  "right": "-1px",
  "top": "-1px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: 2 1`] = `
{
  "bottom": "2px",
  "left": "2px",
  "right": "2px",
  "top": "2px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: undefined 1`] = `
{
  "bottom": 0,
  "left": 0,
  "right": 0,
  "top": 0,
}
`;
